compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__function_argument_shadowing.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 646
expression: "pub fn main(a) {\n  Box\n}\n\npub type Box {\n  Box(Int)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(a) {
  Box
}

pub type Box {
  Box(Int)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).
-export_type([box/0]).

-type box() :: {box, integer()}.

-file("project/test/my/mod.gleam", 1).
-spec main(any()) -> fun((integer()) -> box()).
main(A) ->
    fun(Field@0) -> {box, Field@0} end.
