compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__function_named_module_info_imported_qualified.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 781
expression: "\nimport some_module.{module_info}\n\npub fn main() {\n    module_info()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import some_module.{module_info}

pub fn main() {
    module_info()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 4).
-spec main() -> integer().
main() ->
    some_module:'moduleInfo'().
