compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__function_named_module_info_in_constant.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 928
expression: "\npub fn module_info() {\n    1\n}\n\npub const constant = module_info\n\npub fn main() {\n    constant()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn module_info() {
    1
}

pub const constant = module_info

pub fn main() {
    constant()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export(['moduleInfo'/0, main/0]).

-file("project/test/my/mod.gleam", 2).
-spec 'moduleInfo'() -> integer().
'moduleInfo'() ->
    1.

-file("project/test/my/mod.gleam", 8).
-spec main() -> integer().
main() ->
    'moduleInfo'().
