compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__inline_const_pattern_option.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 667
expression: "pub fn main() {\n            let fifteen = 15\n            let x = <<5:size(sixteen)>>\n            case x {\n              <<5:size(sixteen)>> -> <<5:size(sixteen)>>\n              <<6:size(fifteen)>> -> <<5:size(fifteen)>>\n              _ -> <<>>\n            }\n          }\n\n          pub const sixteen = 16"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
            let fifteen = 15
            let x = <<5:size(sixteen)>>
            case x {
              <<5:size(sixteen)>> -> <<5:size(sixteen)>>
              <<6:size(fifteen)>> -> <<5:size(fifteen)>>
              _ -> <<>>
            }
          }

          pub const sixteen = 16

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 1).
-spec main() -> bitstring().
main() ->
    Fifteen = 15,
    X = <<5:(lists:max([(16), 0]))>>,
    case X of
        <<5:16>> ->
            <<5:(lists:max([(16), 0]))>>;

        <<6:Fifteen>> ->
            <<5:(lists:max([(Fifteen), 0]))>>;

        _ ->
            <<>>
    end.
